# FIL

./: .gitignore  CMakeLists.txt  OFILb.pro  README.md  resources.qrc  resources.rc  resources_32.qrc  resources_64.qrc  resources_cmn.qrc
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-fil-windows.yml  build-ofilb-windows.yml  build-project.yml  check-release-pr.yml  generate-release.yml  master-pull-request-checks.yml  master-pull-request-merge-reaction.yml  pull-request-labeler.yml  push-reaction.yml  tag-release-commit-and-sync-dev.yml
app/: CMakeLists.txt
app/res/: resources.qrc
app/src/: clifp.cpp  clifp.h  import-worker.cpp  import-worker.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
app/src/frontend/: fe-data.cpp  fe-data.h  fe-install.cpp  fe-install.h  fe-installfoundation.cpp  fe-installfoundation.h  fe-installfoundation_linux.cpp  fe-installfoundation_win.cpp  fe-items.h
app/src/frontend/attractmode/: am-data.cpp  am-data.h  am-install.cpp  am-install.h  am-install_linux.cpp  am-items.cpp  am-items.h  am-settings-data.cpp  am-settings-data.h  am-settings-items.cpp  am-settings-items.h
app/src/frontend/launchbox/: lb-data.cpp  lb-data.h  lb-install.cpp  lb-install.h  lb-items.cpp  lb-items.h
app/src/import/: backup.cpp  backup.h  details.cpp  details.h  image.cpp  image.h  properties.cpp  properties.h  settings.cpp  settings.h  worker.cpp  worker.h
app/src/kernel/: clifp.cpp  clifp.h  controller.cpp  controller.h
app/src/launcher/: lr-data.cpp  lr-data.h  lr-install.cpp  lr-install.h  lr-installfoundation.cpp  lr-installfoundation.h  lr-installfoundation_linux.cpp  lr-installfoundation_win.cpp  lr-items.cpp  lr-items.h
app/src/launcher/abstract/: lr-data.h  lr-data.tpp  lr-install.h  lr-install.tpp  lr-registration.cpp  lr-registration.h
app/src/launcher/attractmode/: am-data.cpp  am-data.h  am-install.cpp  am-install.h  am-items.cpp  am-items.h  am-settings-data.cpp  am-settings-data.h  am-settings-items.h
app/src/launcher/implementation/attractmode/: am-data.cpp  am-data.h  am-data.tpp  am-install.cpp  am-install.h  am-install_linux.cpp  am-install_win.cpp  am-items.cpp  am-items.h  am-registration.cpp  am-registration.h  am-settings-data.cpp  am-settings-data.h  am-settings-items.cpp  am-settings-items.h
app/src/launcher/implementation/emulationstation/: es-data.cpp  es-data.h  es-install.cpp  es-install.h  es-install_linux.cpp  es-install_win.cpp  es-items.cpp  es-items.h  es-registration.cpp  es-registration.h
app/src/launcher/interface/: lr-data-interface.cpp  lr-data-interface.h  lr-install-interface.cpp  lr-install-interface.h  lr-install-interface_linux.cpp  lr-install-interface_win.cpp  lr-items-interface.cpp  lr-items-interface.h
app/src/launcher/launchbox/: lb-data.cpp  lb-data.h  lb-install.cpp  lb-install.h  lb-items.h
app/src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  progresspresenter.cpp  progresspresenter.h
cmake/module/: GeneratedResources.cmake  WinExecutableDetails.cmake
cmake/module/FIL/: FetchCLIFp.cmake  GeneratedResources.cmake  WinExecutableDetails.cmake  __resources.qrc.in
doc/: COMPILING.md  LAUNCHERS.md  USAGE.md
include/: qx-io.h  qx.h
lib/: QxW_static32_0-0-7-11_Qt_5-15-2.lib  QxW_static32_0-0-7-12_Qt_5-15-2.lib  QxW_static32_0-0-7-13_Qt_5-15-2.lib  QxW_static32_0-0-7-14_Qt_5-15-2.lib  QxW_static32_0-0-7-15_Qt_5-15-2.lib  QxW_static64_0-0-7-11_Qt_5-15-2.lib  QxW_static64_0-0-7-12_Qt_5-15-2.lib  QxW_static64_0-0-7-13_Qt_5-15-2.lib  QxW_static64_0-0-7-14_Qt_5-15-2.lib  QxW_static64_0-0-7-15_Qt_5-15-2.lib  Qx_static32_0-0-4-1_Qt_5-15-2.lib  Qx_static32_0-0-4-1_Qt_5-15-2d.lib  Qx_static64_0-0-1-2_Qt_5-15-0.lib  Qx_static64_0-0-1-2_Qt_5-15-0d.lib  Qx_static64_0-0-1-3_Qt_5-15-0.lib  Qx_static64_0-0-1-3_Qt_5-15-0d.lib  Qx_static64_0-0-1-4_Qt_5-15-0.lib  Qx_static64_0-0-1-4_Qt_5-15-0d.lib  Qx_static64_0-0-1-7_Qt_5-15-0.lib  Qx_static64_0-0-1-7_Qt_5-15-0d.lib  Qx_static64_0-0-2-0_Qt_5-15-0.lib  Qx_static64_0-0-2-0_Qt_5-15-0d.lib  Qx_static64_0-0-2-10_Qt_5-15-0.lib  Qx_static64_0-0-2-10_Qt_5-15-0d.lib  Qx_static64_0-0-2-10_Qt_6-0-0.lib  Qx_static64_0-0-2-10_Qt_6-0-0d.lib  Qx_static64_0-0-2-12_Qt_5-15-0.lib  Qx_static64_0-0-2-12_Qt_5-15-0d.lib  Qx_static64_0-0-2-13_Qt_5-15-0.lib  Qx_static64_0-0-2-13_Qt_5-15-0d.lib  Qx_static64_0-0-2-14_Qt_5-15-0.lib  Qx_static64_0-0-2-14_Qt_5-15-0d.lib  Qx_static64_0-0-2-1_Qt_5-15-0.lib  Qx_static64_0-0-2-1_Qt_5-15-0d.lib  Qx_static64_0-0-2-2_Qt_5-15-0.lib  Qx_static64_0-0-2-2_Qt_5-15-0d.lib  Qx_static64_0-0-2-4_Qt_5-15-0.lib  Qx_static64_0-0-2-4_Qt_5-15-0d.lib  Qx_static64_0-0-2-5_Qt_5-15-0.lib  Qx_static64_0-0-2-5_Qt_5-15-0d.lib  (+2 more)
res/: importprocessdialog.ui  mainwindow.ui  resources.qrc  resources.rc
res/ui/: mainwindow.ui
src/: clifp.cpp  clifp.h  fe-data.cpp  fe-data.h  fe-install.cpp  fe-install.h  flashpoint-install.cpp  flashpoint-install.h  flashpoint.cpp  flashpoint.h  flashpointinstall.cpp  flashpointinstall.h  frontend-data.cpp  frontend-data.h  frontend.cpp  frontend.h  import-worker.cpp  import-worker.h  importprocessdialog.cpp  importprocessdialog.h  importworker.cpp  importworker.h  launchbox-install.cpp  launchbox-install.h  launchbox-xml.cpp  launchbox-xml.h  launchbox.cpp  launchbox.h  launchboxinstall.cpp  launchboxinstall.h  launchboxxml.cpp  launchboxxml.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  version.h
src/flashpoint/: fp-db.cpp  fp-db.h  fp-install.cpp  fp-install.h  fp-items.cpp  fp-items.h  fp-json.cpp  fp-json.h
src/frontend/: fe-data.cpp  fe-data.h  fe-install.cpp  fe-install.h  fe-installfoundation.cpp  fe-installfoundation.h  fe-items.cpp  fe-items.h
src/frontend/attractmode/: am-data.cpp  am-data.h  am-install.cpp  am-install.h  am-items.cpp  am-items.h  am-settings-data.cpp  am-settings-data.h  am-settings-items.cpp  am-settings-items.h
src/frontend/launchbox/: lb-data.cpp  lb-data.h  lb-install.cpp  lb-install.h  lb-items.cpp  lb-items.h  lb-xml.cpp
src/launchbox/: lb-install.cpp  lb-install.h  lb-items.cpp  lb-items.h  lb-xml.cpp  lb-xml.h
(+8 files in other folders)
